fine tweaks to make sure contextmenu is visible wherever tag is

--- a/public/javascripts/SVLabel/css/svl-context-menu.css
+++ b/public/javascripts/SVLabel/css/svl-context-menu.css
@@ -3,8 +3,8 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 20px;
-    width: 380px;
+    padding: 15px;
+    width: 440px;
     background: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 8.1px;
@@ -28,7 +28,7 @@
     height: auto;
     width: 100%;
     box-sizing: border-box;
-    margin-bottom: 5px;
+    margin-bottom: 3px;
 }
 
 .context-menu-section:last-child {
@@ -64,13 +64,13 @@
     justify-content: center;
     align-items: center;
     padding: 5px 7px;
-    height: 19px;
+    height: 16px;
     border: 0.8px solid #666666;
     border-radius: 16px;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
-    font-size: 8.5px;
-    line-height: 10px;
+    font-size: 8px;
+    line-height: 9.5px;
     color: #000000;
     background: white;
     margin: 0;
@@ -102,7 +102,7 @@
     width: 166px;
     height: auto !important;
     min-height: fit-content;
-    margin-top: 10px;
+    margin-top: 1px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -207,7 +207,7 @@
 #problem-property-menu {
     width: 100%;
     height: auto;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 
 #context-menu-problem-description-text-box {
@@ -234,7 +234,7 @@
     align-items: center;
     padding: 4px 8px;
     width: 31px;
-    height: 20px;
+    height: 100%;
     background: #37A17B;
     border-radius: 4px;
     border: none;
